--- a/package.json
+++ b/package.json
@@ -23,9 +23,15 @@
         "vite": "^4.0.0"
     },
     "dependencies": {
+        "@emotion/react": "^11.14.0",
+        "@emotion/styled": "^11.14.0",
         "@inertiajs/inertia-react": "^0.8.1",
+        "@mui/icons-material": "^6.3.1",
+        "@mui/material": "^6.3.1",
+        "chart.js": "^4.4.7",
         "html2pdf.js": "^0.10.2",
         "papaparse": "^5.4.1",
+        "react-chartjs-2": "^5.3.0",
         "react-hot-toast": "^2.4.1",
         "react-router-dom": "^6.20.0",
         "react-snowfall": "^2.2.0",
