--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
         "papaparse": "^5.4.1",
         "react-chartjs-2": "^5.3.0",
         "react-hot-toast": "^2.4.1",
+        "react-icons": "^5.4.0",
         "react-router-dom": "^6.20.0",
         "react-snowfall": "^2.2.0",
         "react-to-print": "^2.15.1"
