--- a/package.json
+++ b/package.json
@@ -23,10 +23,12 @@
         "vite": "^4.0.0"
     },
     "dependencies": {
+        "@heroicons/react": "^2.2.0",
         "@inertiajs/inertia-react": "^0.8.1",
         "html2pdf.js": "^0.10.2",
         "papaparse": "^5.4.1",
         "react-hot-toast": "^2.4.1",
+        "react-icons": "^5.5.0",
         "react-router-dom": "^6.20.0",
         "react-snowfall": "^2.2.0",
         "react-to-print": "^2.15.1"
