--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
         "papaparse": "^5.4.1",
         "react-hot-toast": "^2.4.1",
         "react-icons": "^5.5.0",
+        "react-quill": "^2.0.0",
         "react-router-dom": "^6.20.0",
         "react-snowfall": "^2.2.0",
         "react-to-print": "^2.15.1"
