--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
         "@heroicons/react": "^2.2.0",
         "@inertiajs/inertia-react": "^0.8.1",
         "html2pdf.js": "^0.10.2",
+        "laravel-echo": "^2.0.2",
         "papaparse": "^5.4.1",
+        "pusher-js": "^8.4.0",
         "react-hot-toast": "^2.4.1",
         "react-icons": "^5.5.0",
         "react-quill": "^2.0.0",
